--- a/lecm-delegation/repo/src/main/config/messages/delegation_ru.properties
+++ b/lecm-delegation/repo/src/main/config/messages/delegation_ru.properties
@@ -1,37 +1,3 @@
-# <model name="lecm-ba:delegations">
-lecm-ba_delegations.title=\u0411\u0438\u0437\u043d\u0435\u0441 \u043c\u043e\u0434\u0435\u043b\u044c \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f \u043f\u043e\u043b\u043d\u043e\u043c\u043e\u0447\u0438\u0439
-
-# <constraint name="lecm-ba:statusList">
-listconstraint.lecm-ba_statusList.NEW=\u043d\u043e\u0432\u0430\u044f
-listconstraint.lecm-ba_statusList.ACTIVE=\u0434\u0435\u0439\u0441\u0442\u0432\u0443\u044e\u0449\u0430\u044f
-listconstraint.lecm-ba_statusList.REVOKED=\u0430\u043d\u043d\u0443\u043b\u0438\u0440\u043e\u0432\u0430\u043d\u043d\u0430\u044f
-listconstraint.lecm-ba_statusList.CLOSED=\u0437\u0430\u043a\u0440\u044b\u0442\u0430\u044f
-
-# <type name="lecm-ba:procuracy">
-lecm-ba_delegations.type.lecm-ba_procuracy.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u044c \u043f\u043e \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044e \u043f\u0440\u0430\u0432
-lecm-ba_delegations.property.lecm-ba_dateUTCBegin.title=\u0414\u0430\u0442\u0430 \u043d\u0430\u0447\u0430\u043b\u0430 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f
-lecm-ba_delegations.property.lecm-ba_dateUTCEnd.title=\u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044f
-lecm-ba_delegations.property.lecm-ba_allFunctions.title=\u0412\u0441\u0435 \u0444\u0443\u043d\u043a\u0446\u0438\u0438
-lecm-ba_delegations.property.lecm-ba_comment.title=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0439 \u0438 \u0434\u0435\u0442\u0430\u043b\u0438
-lecm-ba_delegations.property.lecm-ba_canpropogate.title=\u0424\u043b\u0430\u0433 \u0432\u043e\u0437\u043c\u043e\u0436\u043d\u043e\u0441\u0442\u0438 \u043f\u0435\u0440\u0435\u0434\u0430\u0447\u0438 \u0434\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u0438
-lecm-ba_delegations.property.lecm-ba_dateUTCRevoke.title=\u0412\u0440\u0435\u043c\u044f \u043f\u0440\u0435\u043a\u0440\u0430\u0449\u0435\u043d\u0438\u044f
-lecm-ba_delegations.property.lecm-ba_status.title=\u0421\u043e\u0441\u0442\u043e\u044f\u043d\u0438\u0435 \u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u0438
-lecm-ba_delegations.association.lecm-ba_fromEmployee.title=\u0414\u0435\u043b\u0435\u0433\u0438\u0440\u0443\u044e\u0449\u0438\u0439
-lecm-ba_delegations.association.lecm-ba_toEmployee.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0435 \u043b\u0438\u0446\u043e
-lecm-ba_delegations.association.lecm-ba_delegateRoles.title=\u0421\u043e\u0441\u0442\u0430\u0432 \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u0443\u0435\u043c\u044b\u0445 \u0444\u0443\u043d\u043a\u0446\u0438\u0439
-lecm-ba_delegations.association.lecm-ba_parentProcuracy.title=\u0414\u043e\u043a\u0443\u043c\u0435\u043d\u0442-\u043e\u0441\u043d\u043e\u0432\u0430\u043d\u0438\u0435
-
-#<model name="lecm-br:businessRoleModel">
-lecm-br_business-role-model.title=\u041c\u043e\u0434\u0435\u043b\u044c \u0431\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u0435\u0439
-
-#<type name="lecm-br:business-role-container">
-lecm-br_business-role-model.type.lecm-br_business-role-container.title=\u041a\u043e\u043b\u043b\u0435\u043a\u0446\u0438\u044f \u0431\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u0435\u0439
-lecm-br_business-role-model.association.lecm-br_business-role-assoc.title=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0431\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u0438
-
-#<type name="lecm-br:business-role">
-lecm-br_business-role-model.type.lecm-br_business-role.title=\u0411\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u044c
-lecm-br_business-role-model.property.lecm-br_business-role-name.title=\u0418\u043c\u044f \u0431\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u0438
-
 #<model name="lecm-d8n:delegationModel">
 lecm-d8n_delegation-model.title=\u0411\u0438\u0437\u043d\u0435\u0441 \u043c\u043e\u0434\u0435\u043b\u044c \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f \u043f\u043e\u043b\u043d\u043e\u043c\u043e\u0447\u0438\u0439
 
@@ -44,17 +10,24 @@ listconstraint.lecm-d8n_delegation-opts-status-constraint.NOT_SET=\u0434\u0435\u
 
 #<type name="lecm-d8n:delegation-opts-container">
 lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts-container.title=\u041a\u043e\u043b\u043b\u0435\u043a\u0446\u0438\u044f \u043f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u043e\u0432 \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
-lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.title=\u0421\u0441\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u043f\u0430\u0440\u0430\u043c\u0435\u0440\u0442\u044b \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.title=\u041f\u0430\u0440\u0430\u043c\u0435\u0440\u0442\u044b \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-assoc.description=\u0421\u0441\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u043f\u0430\u0440\u0430\u043c\u0435\u0440\u0442\u044b \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
 
 #<type name="lecm-d8n:procuracy">
 lecm-d8n_delegation-model.type.lecm-d8n_procuracy.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u044c
-lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.title=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0431\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u044c
-lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.title=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0434\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0435 \u043b\u0438\u0446\u043e
+lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.title=\u0411\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u044c
+lecm-d8n_delegation-model.association.lecm-d8n_business-role-assoc.description=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0431\u0438\u0437\u043d\u0435\u0441 \u0440\u043e\u043b\u044c
+lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0435 \u043b\u0438\u0446\u043e
+lecm-d8n_delegation-model.association.lecm-d8n_trustee-assoc.description=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0434\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0435 \u043b\u0438\u0446\u043e
 
 #<type name="lecm-d8n:delegation-opts">
 lecm-d8n_delegation-model.type.lecm-d8n_delegation-opts.title=\u041f\u0430\u0440\u0430\u043c\u0435\u0442\u0440\u044b \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u044f
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-transfer-rights.title=\u041f\u0435\u0440\u0435\u0434\u0430\u0432\u0430\u0442\u044c \u043f\u0440\u0430\u0432\u0430 \u043d\u0430 \u0434\u043e\u043a\u0443\u043c\u0435\u043d\u0442\u044b \u043f\u043e\u0434\u0447\u0438\u043d\u0435\u043d\u043d\u044b\u0445
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-can-delegate-all.title=\u0414\u0435\u043b\u0435\u0433\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0432\u0441\u0435 \u0444\u0443\u043d\u043a\u0446\u0438\u0438
 lecm-d8n_delegation-model.property.lecm-d8n_delegation-opts-status.title=\u0421\u0442\u0430\u0442\u0443\u0441
-lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-owner-assoc.title=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u0443\u044e\u0449\u0435\u0435 \u043b\u0438\u0446\u043e
-lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-procuracy-assoc.title=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0434\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u0438
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-owner-assoc.title=\u0414\u0435\u043b\u0435\u0433\u0438\u0440\u0443\u044e\u0449\u0435\u0435 \u043b\u0438\u0446\u043e
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-owner-assoc.description=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0434\u0435\u043b\u0435\u0433\u0438\u0440\u0443\u044e\u0449\u0435\u0435 \u043b\u0438\u0446\u043e
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-procuracy-assoc.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u0438
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-procuracy-assoc.description=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0434\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0441\u0442\u0438
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-trustee-assoc.title=\u0414\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0435 \u043b\u0438\u0446\u043e
+lecm-d8n_delegation-model.association.lecm-d8n_delegation-opts-trustee-assoc.description=\u0421\u0441\u044b\u043b\u043a\u0430 \u043d\u0430 \u0434\u043e\u0432\u0435\u0440\u0435\u043d\u043d\u043e\u0435 \u043b\u0438\u0446\u043e
