--- a/lecm-subscriptions/repo/src/main/config/messages/subscriptions_ru.properties
+++ b/lecm-subscriptions/repo/src/main/config/messages/subscriptions_ru.properties
@@ -12,3 +12,5 @@ lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-organizat
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-organization-unit-assoc.description=\u041F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F unit
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-group-assoc.title=\u0420\u0430\u0431\u043E\u0447\u0438\u0438 \u0433\u0440\u0443\u043F\u043F\u044B
 lecm-subscr_subscriptionsStructure.association.lecm-subscr_destination-work-group-assoc.description=\u0420\u0430\u0431\u043E\u0447\u0438\u0438 \u0433\u0440\u0443\u043F\u043F\u044B
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_notification-type-assoc.title=\u0422\u0438\u043F \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438 \u0443\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u0439
+lecm-subscr_subscriptionsStructure.association.lecm-subscr_notification-type-assoc.description=\u0422\u0438\u043F \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438 \u0443\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u0439
