--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions_ru.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions_ru.properties
@@ -4,6 +4,9 @@ page.subscriptions-to-object=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0438 \u
 page.subscriptions.filter.label=(\u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
 
 button.subscribe=\u041F\u043E\u0434\u043F\u0438\u0441\u0430\u0442\u044C\u0441\u044F
+label.subscribe.title=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0430
+message.save.subscribe.success=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0430 \u0443\u0441\u043F\u0435\u0448\u043D\u043E \u0441\u043E\u0437\u0434\u0430\u043D\u0430
+message.save.subscribe.failure=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u0438 \u043F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
 
 header.subscriptions.label=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
 header.subscriptions.description=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
