--- a/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
+++ b/lecm-business-journal/repo/src/main/config/messages/business-journal_ru.properties
@@ -31,8 +31,8 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-descripti
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-description.description=\u041E\u043F\u0438\u0441\u0430\u043D\u0438\u0435
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-mainObject.title=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0439 \u043E\u0431\u044A\u0435\u043A\u0442
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-mainObject.description=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0439 \u043E\u0431\u044A\u0435\u043A\u0442
-lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-initiator.title=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
-lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-inititator.description=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-initiator.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A-\u0438\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
+lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-inititator.description=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A-\u0438\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj1.description=\u041E\u0431\u044A\u0435\u043A\u0442 1 (\u0422\u0435\u043A\u0441\u0442)
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj1.title=\u041E\u0431\u044A\u0435\u043A\u0442 1 (\u0422\u0435\u043A\u0441\u0442)
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj2.description=\u041E\u0431\u044A\u0435\u043A\u0442 2 (\u0422\u0435\u043A\u0441\u0442)
@@ -43,8 +43,8 @@ lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondary
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj4.title=\u041E\u0431\u044A\u0435\u043A\u0442 4 (\u0422\u0435\u043A\u0441\u0442)
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj5.description=\u041E\u0431\u044A\u0435\u043A\u0442 5 (\u0422\u0435\u043A\u0441\u0442)
 lecm-busjournal_businessJournalModel.property.lecm-busjournal_bjRecord-secondaryObj5.title=\u041E\u0431\u044A\u0435\u043A\u0442 5 (\u0422\u0435\u043A\u0441\u0442)
-lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-initiator-assoc.title=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C-\u0438\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440 \u0441\u043E\u0431\u044B\u0442\u0438\u044F
-lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-initiator-assoc.description=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C-\u0438\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440 \u0441\u043E\u0431\u044B\u0442\u0438\u044F
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-initiator-assoc.title=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C-\u0438\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
+lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-initiator-assoc.description=\u041F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044C-\u0438\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-mainObject-assoc.title=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0439 \u043E\u0431\u044A\u0435\u043A\u0442
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-mainObject-assoc.description=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0439 \u043E\u0431\u044A\u0435\u043A\u0442
 lecm-busjournal_businessJournalModel.association.lecm-busjournal_bjRecord-evCategory-assoc.title=\u041A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u044F \u0441\u043E\u0431\u044B\u0442\u0438\u0439
