--- a/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form_ru.properties
+++ b/lecm-business-journal/share/src/main/java/ru/it/lecm/business-journal/form/form_ru.properties
@@ -3,3 +3,8 @@ page.business-journal.filter.label=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u
 
 header.business-journal.label=\u0411\u0438\u0437\u043D\u0435\u0441-\u0436\u0443\u0440\u043D\u0430\u043B
 header.business-journal.description=\u0411\u0438\u0437\u043D\u0435\u0441-\u0436\u0443\u0440\u043D\u0430\u043B
+
+info.common-info=\u041E\u0441\u043D\u043E\u0432\u043D\u043E\u0435
+info.secondary-info=\u0414\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u044B\u0435 \u043E\u0431\u044A\u0435\u043A\u0442\u044B
+
+lecm-busjournal_secondary-objects=\u0412\u0442\u043E\u0440\u0438\u0447\u043D\u044B\u0435 \u043E\u0431\u044A\u0435\u043A\u0442\u044B
