--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/datagrid/datagrid.get_ru.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/all/datagrid/datagrid.get_ru.properties
@@ -1,6 +1,7 @@
 #X-Generator: crowdin.net
 label.column.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
 label.column.actions=\u0414\u0435\u0439\u0441\u0442\u0432\u0438\u044F
+label.create-row.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435
 label.edit-row.title=\u0418\u0437\u043C\u0435\u043D\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442
 label.edit-row.edit-dataitem=\u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u0435 \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u0430...
 
@@ -16,7 +17,7 @@ message.delete.success=\u042D\u043B\u0435\u043C\u0435\u043D\u0442 \u0443\u0434\u
 message.delete.failure=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0443\u0434\u0430\u043B\u0438\u0442\u044C \u044D\u043B\u0435\u043C\u0435\u043D\u0442
 message.duplicate.success=\u041A\u043E\u043F\u0438\u044F \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0430
 message.duplicate.failure=\u041D\u0435 \u0443\u0434\u0430\u043B\u043E\u0441\u044C \u0441\u043E\u0437\u0434\u0430\u0442\u044C \u043A\u043E\u043F\u0438\u044E \u044D\u043B\u0435\u043C\u0435\u043D\u0442\u0430
-message.version = \u0412\u0435\u0440\u0441\u0438\u044f:
+message.version = \u0412\u0435\u0440\u0441\u0438\u044F:
 
 ## Drop-down Menus
 menu.select=\u0412\u044B\u0431\u0440\u0430\u0442\u044C
