--- a/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor_ru.properties
+++ b/lecm-statemachine-editor/share/src/main/java/ru/it/lecm/statemachine/editor/editor_ru.properties
@@ -18,3 +18,4 @@ statemachine.editor.form.events=\u041E\u0431\u0440\u0430\u0431\u043E\u0442\u0447
 lecm-stmeditor_statusTransitionType=\u0422\u0438\u043F \u043F\u0435\u0440\u0435\u0445\u043E\u0434\u0430
 lecm-stmeditor_statusExpression=\u0423\u0441\u043B\u043E\u0432\u0438\u0435
 lecm-stmeditor_statusTarget=\u0421\u0442\u0430\u0442\u0443\u0441
+statemachine.editor.form.permissions=\u041F\u0440\u0430\u0432\u0430 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
