--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/toolbar/toolbar.get_ru.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/business-journal/toolbar/toolbar.get_ru.properties
@@ -19,3 +19,5 @@ menu.selected-items.duplicate=\u041F\u0440\u043E\u0434\u0443\u0431\u043B\u0438\u
 menu.selected-items.delete=\u0423\u0434\u0430\u043B\u0438\u0442\u044C
 menu.selected-items.deselect-all=\u041E\u0442\u043C\u0435\u043D\u0438\u0442\u044C \u0432\u0441\u0435
 
+button.export-csv=\u042D\u043A\u0441\u043F\u043E\u0440\u0442 CSV
+
