--- a/lecm-notifications/repo/src/main/config/messages/notifications_type_ru.properties
+++ b/lecm-notifications/repo/src/main/config/messages/notifications_type_ru.properties
@@ -4,3 +4,5 @@ lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_code.title=\u
 lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_code.description=\u041A\u043E\u0434
 lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_spring-bean-id.title=Spring Bean ID
 lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_spring-bean-id.description=Spring Bean ID
+lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_default-select.title=\u0412\u044B\u0431\u0440\u0430\u043D \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
+lecm-notf-type_dictionaryNotificationTypes.property.lecm-notf-type_default-select.description=\u0412\u044B\u0431\u0440\u0430\u043D \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
