--- a/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions_ru.properties
+++ b/lecm-subscriptions/share/src/main/java/ru/it/lecm/subscriptions/subscriptions_ru.properties
@@ -16,3 +16,5 @@ message.unsibscribe.success=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0430 \u0
 
 header.subscriptions.label=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
 header.subscriptions.description=\u041F\u043E\u0434\u043F\u0438\u0441\u043A\u0438
+info.input-text-info=\u0410\u0434\u0440\u0435\u0441\u0430\u0442\u044B
+info.table-info=\u0421\u043F\u043E\u0441\u043E\u0431\u044B \u0434\u043E\u0441\u0442\u0430\u0432\u043A\u0438
