--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -33,6 +33,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_rolesFolder.title=\u0411\u0438\u043
 lecm-stmeditor_model.property.lecm-stmeditor_creationDocument.title=\u0421\u043E\u0437\u0434\u0430\u0442\u0435\u043B\u044C
 lecm-stmeditor_model.property.lecm-stmeditor_staticRoles.title=\u0421\u0442\u0430\u0442\u0438\u0447\u043D\u044B\u0435 \u0440\u043E\u043B\u0438
 lecm-stmeditor_model.property.lecm-stmeditor_dynamicRoles.title=\u0414\u0438\u043D\u0430\u043C\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0440\u043E\u043B\u0438
-listconstraint.lecm-stmeditor_permissionType.READ=\u0427\u0442\u0435\u043D\u0438\u0435
-listconstraint.lecm-stmeditor_permissionType.WRITE=\u0417\u0430\u043F\u0438\u0441\u044C
 lecm-stmeditor_model.property.lecm-stmeditor_permissionTypeValue.title=\u0414\u043E\u0441\u0442\u0443\u043F
+listconstraint.lecm-stmeditor_permissionType.noaccess=\u041D\u0435\u0442 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
+listconstraint.lecm-stmeditor_permissionType.readonly=\u0427\u0442\u0435\u043D\u0438\u0435
+listconstraint.lecm-stmeditor_permissionType.full=\u0417\u0430\u043F\u0438\u0441\u044C
