--- a/lecm-notifications-email/repo/src/main/config/messages/lecm-notifications-email_ru.properties
+++ b/lecm-notifications-email/repo/src/main/config/messages/lecm-notifications-email_ru.properties
@@ -1,1 +1,1 @@
-notifications.email.subject=\u041D\u043E\u0432\u043E\u0435 \u0443\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u0435
+notifications.email.subject=\u041B\u043E\u0433\u0438\u043A\u0430 ECM\: \u0443\u0432\u0435\u0434\u043E\u043C\u043B\u0435\u043D\u0438\u0435
