--- a/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form_ru.properties
+++ b/lecm-calendar/share/src/main/java/ru/it/lecm/wcalendar/form/form_ru.properties
@@ -40,8 +40,11 @@ label.shedule.form.set.date-interval.begin=C
 label.shedule.form.set.date-interval.end=\u043f\u043e
 label.shedule.form.set.work-time=\u0420\u0430\u0431\u043e\u0447\u0435\u0435 \u0432\u0440\u0435\u043c\u044f
 label.shedule.form.shift-work-type=\u0421\u043c\u0435\u043d\u043d\u044b\u0439 \u0433\u0440\u0430\u0444\u0438\u043a
-label.shedule.form.week-days-type=\u0414\u043d\u0438 \u043d\u0435\u0434\u0435\u043b\u0438
-label.shedule.form.month-days-type=\u0414\u043d\u0438 \u043c\u0435\u0441\u044f\u0446\u0430
+label.shedule.form.week-days-type=\u041a\u0430\u0436\u0434\u0443\u044e \u043d\u0435\u0434\u0435\u043b\u044e
+label.shedule.form.month-days-type=\u041a\u0430\u0436\u0434\u044b\u0439 \u043c\u0435\u0441\u044f\u0446
 label.shedule.form.workind-days-amount=\u0420\u0430\u0431\u043e\u0447\u0438\u0445 \u0434\u043d\u0435\u0439
 label.shedule.form.workind-days-interval=\u0427\u0435\u0440\u0435\u0437
 label.shedule.form.month-days=\u0414\u043d\u0438 \u043c\u0435\u0441\u044f\u0446\u0430
+label.shedule.form.shift-work.working-days=\u0420\u0430\u0431\u043e\u0447\u0438\u0445 \u0434\u043d\u0435\u0439
+label.shedule.form.shift-work.non-working-days=\u0412\u044b\u0445\u043e\u0434\u043d\u044b\u0445 \u0434\u043d\u0435\u0439
+label.shedule.form.reiteration-rules=\u041f\u0440\u0430\u0432\u0438\u043b\u0430 \u043f\u043e\u0432\u0442\u043e\u0440\u0435\u043d\u0438\u044f
