--- a/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dashlet-business-journal/business-journal.get_ru.properties
+++ b/lecm-business-journal/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dashlet-business-journal/business-journal.get_ru.properties
@@ -12,6 +12,7 @@ label.select.whose.department=\u041C\u043E\u0435\u0433\u043E \u043E\u0442\u0434\
 label.select.whose.control=\u041D\u0430 \u043A\u043E\u043D\u0442\u0440\u043E\u043B\u0435
 
 label.select.all=\u0412\u0441\u0435
+label.select.days.all=\u0417\u0430 \u0432\u0441\u0435 \u0432\u0440\u0435\u043C\u044F
 
 label.no.records = \u041D\u0435\u0442 \u0437\u0430\u043F\u0438\u0441\u0435\u0439
 
